--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "classnames": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-floating-button-menu": "^2.1.1",
     "react-scripts": "4.0.1",
     "react-typed": "^1.2.0",
+    "styled-components": "^5.2.1",
     "typeit-react": "^0.1.3",
     "web-vitals": "^0.2.4"
   },
