--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.1",
     "react-floating-button-menu": "^2.1.1",
     "react-scripts": "4.0.1",
+    "react-social-icons": "^4.1.0",
     "react-typed": "^1.2.0",
     "styled-components": "^5.2.1",
     "typeit-react": "^0.1.3",
