--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-floating-button-menu": "^2.1.1",
+    "react-loader-spinner": "^4.0.0",
+    "react-preloader-icon": "^1.0.0",
+    "react-preloaders": "^3.0.3",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.1",
     "react-social-icons": "^4.1.0",
     "react-typed": "^1.2.0",
